# mod-translator

./: .gitattributes  .gitignore  Cargo.toml  README.md  development.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  (+1 more)
core/: Cargo.toml
core/src/: archive.rs  backup.rs  codex_spec_tests.rs  config.rs  encoding.rs  format_validator.rs  integration_tests.rs  jobs.rs  lib.rs  library.rs  llm_guards.rs  math_units.rs  pipeline.rs  placeholder_validator.rs  policy.rs  protector.rs  quality.rs  scanner.rs  steam.rs  text_extractor.rs  time.rs  tone_analyzer.rs  validation.rs  validation_logger.rs  validator.rs
core/src/ai/: hints.rs  mod.rs  retry.rs
core/src/formats/: csv.rs  ini.rs  json.rs  lua.rs  markdown.rs  mod.rs  po.rs  properties.rs  txt.rs  xml.rs  yaml.rs
core/src/job/: runner.rs
core/src/profiles/: factorio.rs  minecraft.rs  mod.rs  rimworld.rs  stardew.rs
core/src/scanners/: lua.rs  markdown.rs  mod.rs  properties.rs
core/src/translate/: mod.rs
core/tests/: e2e_test.rs
core/tests/fixtures/: sample.json  sample.lua  sample.properties  sample.xml
devplan/: Project_Evaluation_Report.md  Project_Improvement_Exploration_Report.md  Prompt.md  Session_History.md
docs/: CLI_GUIDE.md  CODEX_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  README.md  VALIDATION_SYSTEM.md  architecture.md  cli-usage.md  formats.md  implementation-summary.md  placeholder-validator.md  production-hardening-plan.md  universal-token-validator.md
(+41 files in other folders)
