[package]
name = "mod_translator_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tauri = { version = "2.9.1" }
dirs = "5.0"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
regex = "1.10"
once_cell = "1.19"
chrono = { version = "0.4", features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
open = "5.3"
httpdate = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
dunce = "1.0"
hex = "0.4"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3.10"
